<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imgSP"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNameProduct_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgSP"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/txtnameSanPham"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/imgSP" />

        <TextView
            android:id="@+id/txtGiaSP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgSP"
            android:padding="10dp"
            android:text="@string/txtgiaSanPham"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/txtNameProduct_bottom"
            app:layout_constraintLeft_toRightOf="@+id/imgSP" />

        <TextView
            android:id="@+id/txtColor_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/txtGiaSP"
            app:layout_constraintLeft_toRightOf="@+id/imgSP"/>

        <TextView
            android:id="@+id/txtSize_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/txtColor_bottom"
            app:layout_constraintLeft_toRightOf="@+id/imgSP"/>

        <LinearLayout
            android:id="@+id/layoutContain_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSP">

            <TextView
                android:id="@+id/lblColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:text="@string/mau_sac"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_color"
                android:layout_width="350dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutContain_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutContain_color">

            <TextView
                android:id="@+id/lblSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:text="@string/size"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lblBoardSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/Bangsize"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_size"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblSize"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Layout_SoLuong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutContain_size">

            <TextView
                android:id="@+id/lblSoLuong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/soluong"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrement_bottom"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:backgroundTint="#EEEEEE"
                    android:padding="0dp"
                    android:text="@string/dau_tru"
                    android:textColor="@color/color_gia"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/display_bottom"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textColor="@color/color_gia" />

                <Button
                    android:id="@+id/increment_bottom"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:backgroundTint="#EEEEEE"
                    android:padding="0dp"
                    android:text="@string/dau_cong"
                    android:textAlignment="center"
                    android:textColor="@color/color_gia"
                    android:textSize="17sp" />
            </LinearLayout>
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_gia"
            android:text="@string/action_muangay"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/Layout_SoLuong" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>